--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -5,75 +5,47 @@ HEADER
 .header{
     display: flex;
     padding: 30px;
-    justify-content: space-between;
+    justify-content: flex-end;
     margin-top: 18px;
     margin-bottom: 40px;
     position: relative;
 
-    .logo,
-    .rect4,
-    .rect3,
-    .rect2,
-    .rect1,
-    nav{
-         position: absolute;
+    div{
+        position: absolute;
+        width: 42px;
+        height: 42px;
+        left: 0;
+        transform: rotate(45deg);
+
+        &:hover{
+            transform: rotate(90deg);
+            }
     }
 
-    .rect4{
-        top: 0px;
-        left: 2px;
+    .yellow {
+        background-color: #d1ffa2;
+        left: 25px;
     }
 
-    .rect3{
-        top: 0px;
-        left: 7px
+    .blue {
+        background-color: #0098ef;
+        left: 20px;
+     }
+
+     .green{
+        background-color: #00cf95;
+        left: 15px;
     }
 
-    .rect2{
-        top: 0px;
+    .purple{
+        background-color: #6d0ad3;
         left: 10px;
     }
 
-    .rect1{
-        top: 0px;
-        left: 14px;
-    }
+    .logo {
+        position: absolute;
+        left: 35px;
+        top: 35px;
+     }
 
-    .logo{
-        top: 15px;
-        left: 34px;
-    }
-
-    nav{
-        right: 0;
-        align-self: center;
-    }
-
-    ul{
-        display: flex;
-        justify-content: space-between;
-    }
-
-    li{
-        padding: 10px 10px;
-        font-family: raleway;
-        font-size: 1.4rem;
-    }
-
-    a{
-        font-weight: bold;
-        padding: 5px 0px;
-        color:#000;
-
-        &:hover{
-            font-weight: bold;
-            color: #832FDA;
-            border-bottom: 5px solid #832FDA;
-        }
-
-        &:active{
-            color: #00CF95;
-        }
-    }
-    
 }
