--- a/style/main.scss
+++ b/style/main.scss
@@ -1,5 +1,6 @@
 @import "../sass/global";
 @import "../sass/header";
+@import "../sass/nav";
 @import "../sass/layout";
 @import "../sass/intro";
 @import "../sass/vector";
